# Autodrive_Toolchain

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  clean_cache.sh  data_reader_test.cc  main.cpp  only_test.sh  run.sh  run_test.sh  task.md
.VSCodeCounter/2022-07-09_21-03-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
common/: CMakeLists.txt  config_flags.cc  config_flags.hpp  logger.cc  logger.hpp  macros.hpp  time_base.cc  time_base.hpp  time_utils.cc  time_utils.hpp
config/: D435i.yaml  ReadMe.md  config.h  config.txt  ros_interface_config.txt
config_data/: ReadMe.md  lidar_pose.txt
doc/: Ceres Solver.md  Eigen.md  矩阵求导方法.md
doc/如何使用git/: git使用.md
doc/惯性导航/: imu预积分.md
doc/李群与李代数/: 李群与李代数.md
docker/: build_docker.sh
docker/docker/: Dockerfile
docker/docker/image/: startup.sh
docker/docker/image/etc/supervisor/: supervisord.conf
docker/docker_without_ros/: docker-compose.yml  run_into.sh
examples/: CMakeLists.txt
examples/SGD/: CMakeLists.txt  ReadMe.md  plot_data.py  problem.hpp  sgd_example.cpp
examples/cloud_processing/: CMakeLists.txt  filter_example.cpp  pca_example.cpp
examples/cloud_processing/testdata/: cloud_filter_out1.pcd  cloud_pca_input.pcd  cloud_pca_out1.pcd  cloud_pca_out2.pcd  cloud_pca_out3.pcd  cloud_pca_out3.ply  desk.txt  desk_0001.txt
examples/image_processing/: CMakeLists.txt  image_processing_example.cpp
gtest/: CMakeLists.txt  common_test.cpp  gtest_all.cpp  interface_test.cpp  math_kalman_filter_test.cpp  math_utils_sgd.cpp  math_utils_test.cpp  senser_data_test.cpp  third_party_test.cpp
gtest/config_data/: extrinsics.yaml
gtest/config_test/: config_test.txt
interface/: CMakeLists.txt  DataConverter.cc  DataConverter.h  DataProcessor.cc  DataProcessor.h  DataReader.cpp  DataReader.h  DataWriter.cc  DataWriter.h
math_utils/: CMakeLists.txt  cost_fuction.hpp  curve_fitting.hpp  kalman_filter.hpp  matrix_operations.hpp  steepest_gradient_descent.hpp
modules/: CMakeLists.txt
modules/cloud_processing/core/: CMakeLists.txt  container.hpp  principal_component_analysis.hpp  segment.h
modules/cloud_processing/filter/: CMakeLists.txt  base_filter.hpp  no_filter.hpp  voxel_filter.hpp
modules/cloud_processing/io/: cloud_reader.hpp  cloud_writer.hpp
modules/image_processing/: CMakeLists.txt  image_processing.cc  image_processing.h
modules/image_processing/depth_filter/: CMakeLists.txt  Config.h  JBF.cc  JBF.h  Kernel.cc  Kernel.h
modules/visualization/: CMakeLists.txt  image_visualization.cc  image_visualization.h
ros_interface/: CMakeLists.txt  package.xml  ros_interface.cpp  ros_node.cpp
ros_interface/launch/: ros_test.launch
ros_interface/src/: image_subscriber.cc  image_subscriber.h  imu_subscriber.cc  imu_subscriber.h  message_flow.cc  message_flow.h  rgbd_message_flow.cc  rgbd_message_flow.h  rgbdi_message_flow.cc  rgbdi_message_flow.h
ros_interface/src/message_flow/: message_flow.h  rgbd_message_flow.cc  rgbd_message_flow.h  rgbdi_message_flow.cc  rgbdi_message_flow.h
ros_interface/src/subscriber/: image_subscriber.cc  image_subscriber.h  imu_subscriber.cc  imu_subscriber.h
ros_interface/srv/: saveOdometry.srv
scripts/tools/ROS相关/将数据集转换为ros_bag格式/: convert2bag.py
scripts/tools/数据处理相关/TUM格式数据集深度和彩色图像关联/: associate.py
scripts/tools/数据处理相关/将图片序列生成视频/: convert.py
scripts/tools/数据处理相关/标签和图像对齐生成txt文件/: alignment.py  test.txt
scripts/tools/数据处理相关/标签和图像对齐生成txt文件/test_label/: 963258.txt
scripts/tools/数据处理相关/读取TXT文件并绘图/: MC.txt  NMC.txt  plot.py
scripts/tools/数据处理相关/遍历文件KITTI格式转换单文件TUM格式/: convert.py  ground_truth.txt
scripts/tools/数据处理相关/遍历文件KITTI格式转换单文件TUM格式/pose/: frame-000000.pose.txt  frame-000001.pose.txt  frame-000002.pose.txt  frame-000003.pose.txt  frame-000004.pose.txt  frame-000005.pose.txt  frame-000006.pose.txt  frame-000007.pose.txt  frame-000008.pose.txt  frame-000009.pose.txt  frame-000010.pose.txt  frame-000011.pose.txt  frame-000012.pose.txt  frame-000013.pose.txt  frame-000014.pose.txt  frame-000015.pose.txt  frame-000016.pose.txt  frame-000017.pose.txt  frame-000018.pose.txt  frame-000019.pose.txt  frame-000020.pose.txt  frame-000021.pose.txt  frame-000022.pose.txt  frame-000023.pose.txt  frame-000024.pose.txt  frame-000025.pose.txt  frame-000026.pose.txt  frame-000027.pose.txt  frame-000028.pose.txt  frame-000029.pose.txt  frame-000030.pose.txt  frame-000031.pose.txt  frame-000032.pose.txt  frame-000033.pose.txt  frame-000034.pose.txt  frame-000035.pose.txt  frame-000036.pose.txt  frame-000037.pose.txt  frame-000038.pose.txt  frame-000039.pose.txt  (+960 more)
scripts/tools/深度学习相关/将图像和标签按照相同顺序打乱/: shuffle.py
scripts/tools/深度学习相关/将图像和标签按照相同顺序打乱/test_label/: 654321.txt  789456.txt  abc1200.txt  bcd1300.txt  master5600.txt  ter1200.txt
scripts/tools/深度学习相关/根据文本绘制目标检测框/: plot.py
sensor_data/: CMakeLists.txt  Infrastructure.hpp  Infrastructure.inl  gnss_data.hpp  image_data.hpp  imu_data.hpp  lidar_measurement_data.hpp  pose_data.hpp
